src/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/vw/1xx7vzj92l7bnsk2xft9hnth0000gn/T/AppTranslocation/D6214814-A480-4F89-84E6-65E2A66332B1/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/vw/1xx7vzj92l7bnsk2xft9hnth0000gn/T/AppTranslocation/D6214814-A480-4F89-84E6-65E2A66332B1/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/vw/1xx7vzj92l7bnsk2xft9hnth0000gn/T/AppTranslocation/D6214814-A480-4F89-84E6-65E2A66332B1/d/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/vw/1xx7vzj92l7bnsk2xft9hnth0000gn/T/AppTranslocation/D6214814-A480-4F89-84E6-65E2A66332B1/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/vw/1xx7vzj92l7bnsk2xft9hnth0000gn/T/AppTranslocation/D6214814-A480-4F89-84E6-65E2A66332B1/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/vw/1xx7vzj92l7bnsk2xft9hnth0000gn/T/AppTranslocation/D6214814-A480-4F89-84E6-65E2A66332B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/vw/1xx7vzj92l7bnsk2xft9hnth0000gn/T/AppTranslocation/D6214814-A480-4F89-84E6-65E2A66332B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/vw/1xx7vzj92l7bnsk2xft9hnth0000gn/T/AppTranslocation/D6214814-A480-4F89-84E6-65E2A66332B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/vw/1xx7vzj92l7bnsk2xft9hnth0000gn/T/AppTranslocation/D6214814-A480-4F89-84E6-65E2A66332B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/vw/1xx7vzj92l7bnsk2xft9hnth0000gn/T/AppTranslocation/D6214814-A480-4F89-84E6-65E2A66332B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/vw/1xx7vzj92l7bnsk2xft9hnth0000gn/T/AppTranslocation/D6214814-A480-4F89-84E6-65E2A66332B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/vw/1xx7vzj92l7bnsk2xft9hnth0000gn/T/AppTranslocation/D6214814-A480-4F89-84E6-65E2A66332B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/vw/1xx7vzj92l7bnsk2xft9hnth0000gn/T/AppTranslocation/D6214814-A480-4F89-84E6-65E2A66332B1/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/thomas/coding/java/MU80/src
-d
/Users/thomas/coding/java/MU80/src/doc
-encoding
UTF-8
-charset
UTF-8
/Users/thomas/coding/java/MU80/src/msg/XGMessageBuffer.java
<---- end of javadoc command ---->
Loading source file /Users/thomas/coding/java/MU80/src/msg/XGMessageBuffer.java...
Constructing Javadoc information...
/Users/thomas/coding/java/MU80/src/device/XGMidi.java:20: error: package uk.co.xfactorylibrarians.coremidi4j does not exist
import uk.co.xfactorylibrarians.coremidi4j.CoreMidiDeviceProvider;
                                          ^
/Users/thomas/coding/java/MU80/src/device/XGMidi.java:21: error: package uk.co.xfactorylibrarians.coremidi4j does not exist
import uk.co.xfactorylibrarians.coremidi4j.CoreMidiException;
                                          ^
/Users/thomas/coding/java/MU80/src/device/XGMidi.java:22: error: package uk.co.xfactorylibrarians.coremidi4j does not exist
import uk.co.xfactorylibrarians.coremidi4j.CoreMidiNotification;
                                          ^
/Users/thomas/coding/java/MU80/src/device/XGMidi.java:25: error: cannot find symbol
public class XGMidi implements XGMidiConstants, XGMessenger, CoreMidiNotification, Configurable, Receiver, AutoCloseable
                                                             ^
  symbol: class CoreMidiNotification
/Users/thomas/coding/java/MU80/src/device/XGMidi.java:209: error: cannot find symbol
	@Override public void midiSystemUpdated() throws CoreMidiException
	                                                 ^
  symbol:   class CoreMidiException
  location: class XGMidi
5 errors
